update integration (#121)
* update integration

Update your exception handling integration test so that it runs through the validation logic in ComputeEngineImpl
Update TestUser to only call methods on the coordinator

* update integration

Update your exception handling integration test so that it runs through the validation logic in ComputeEngineImpl
Update TestUser to only call methods on the coordinator

* updated integrationtest

* Update UserComputeImpl.java

* Update UserComputeImpl.java